--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "three": "^0.160.0",
     "gsap": "^3.12.4",
-    "howler": "^2.2.4"
+    "howler": "^2.2.4",
+    "three": "^0.160.1"
   }
 }
